--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules/
+/frontend/node_modules/
 /.pnp
 .pnp.*
 .yarn/*
@@ -12,13 +12,17 @@
 
 # testing
 /coverage
+/frontend/coverage/
 
 # next.js
-/.next/
+.next/
+/frontend/.next/
 /out/
+/frontend/out/
 
 # production
 /build
+/frontend/build/
 
 # misc
 .DS_Store
@@ -32,6 +36,7 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+backend/.env
 
 # vercel
 .vercel
@@ -39,3 +44,20 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Python (Backend)
+backend/venv/
+backend/__pycache__/
+backend/**/__pycache__/
+backend/*.pyc
+backend/*.pyo
+backend/*.pyd
+backend/.Python
+backend/pip-log.txt
+backend/pip-delete-this-directory.txt
+*.egg-info/
+.pytest_cache/
+backend/**/*.pyc
+
+# Backend data (optional - 임베딩 파일 제외하려면 주석 해제)
+# backend/data/prototypes.json
