pytorch only cpu

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,8 @@ uvicorn[standard]==0.27.0
 # CORS and file upload
 python-multipart==0.0.6
 
-# AI/ML libraries
+# AI/ML libraries (CPU 전용 버전으로 용량 최적화)
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch>=2.5.0
 torchvision>=0.20.0
 transformers>=4.37.0
