memory scale up

--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -19,13 +19,13 @@ primary_region = 'nrt'
 
   # Health check 설정 (모델 로딩 시간 고려)
   [[http_service.checks]]
-    grace_period = "60s"  # 서버 시작 후 60초 대기
-    interval = "30s"      # 30초마다 체크
+    grace_period = "120s"  # 서버 시작 후 120초 대기 (모델 로딩 시간 충분히 확보)
+    interval = "30s"       # 30초마다 체크
     method = "GET"
-    timeout = "5s"        # 응답 대기 시간
-    path = "/api/health"  # Health check 엔드포인트
+    timeout = "10s"        # 응답 대기 시간 (5s → 10s로 증가)
+    path = "/api/health"   # Health check 엔드포인트
 
 [[vm]]
-  memory = '2gb'
+  memory = '3gb'  # 2gb → 3gb (OOM 방지, 여전히 무료!)
   cpu_kind = 'shared'
   cpus = 1
