배포 플랫폼 Fly.io => Hugging Face 변경

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,17 @@
 # Python 3.11 slim 이미지 (가볍고 빠름)
 FROM python:3.11-slim
 
+# user 생성 (Hugging Face Spaces 요구사항)
+RUN useradd -m -u 1000 user
+
 # 환경 변수 설정
 ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1
+    PYTHONDONTWRITEBYTECODE=1 \
+    HOME=/home/user \
+    PATH=/home/user/.local/bin:$PATH \
+    HF_HOME=/home/user/.cache/huggingface \
+    TRANSFORMERS_CACHE=/home/user/.cache/huggingface \
+    TORCH_HOME=/home/user/.cache/torch
 
 # 작업 디렉토리
 WORKDIR /app
@@ -14,17 +22,20 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 # requirements.txt 복사 및 설치
-COPY requirements.txt .
+COPY --chown=user:user requirements.txt .
+
+# user로 전환
+USER user
 
 # pip 업그레이드 및 패키지 설치
 RUN pip install --no-cache-dir --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
 # 애플리케이션 코드 복사
-COPY . .
+COPY --chown=user:user . .
 
 # 포트 설정
-EXPOSE 8000
+EXPOSE 7860
 
 # 실행 명령어 (main.py 실행)
 CMD ["python", "main.py"]
